src/style/components/SegmentSwitcher.scss
.segment-switcher {

  &.ios {
    margin: 7px auto;
    ion-segment-button {
      --color: var(--fat-background-contrast);
    }

    &.active-player, &.link-or-cancel, &.recovery-type, &.stat-chooser {
      width: 70%;
      --background: var(--fat-switcher-primary-ios-background);
      ion-segment-button {
        --indicator-color: var(--fat-switcher-primary-ios-checked);
      }
    }
    &.vtrigger {
      width: 85%;
      --background: var(--fat-switcher-vtrigger-ios-background);
      ion-segment-button {
        --indicator-color: var(--fat-switcher-vtrigger-ios-checked);
      }
    }
    &.stat-chooser {
      margin: 10px 0;
      max-width: 100%;
      width: fit-content;
    }
  }

  &.md {
    --background: var(--fat-switcher-android-background);

    &.stat-chooser {
      min-width: 870px;
    }
  }
  &.active-player, &.link-or-cancel, &.recovery-type, &.stat-chooser {
    ion-segment-button {
      &.md {
        --background-hover: var(--fat-switcher-primary-checked-contrast);
        --color-checked: var(--fat-switcher-primary-checked-contrast);
        --color: var(--fat-switcher-unchecked-contrast);
        --indicator-color: var(--fat-switcher-primary-checked-contrast);
        --indicator-height: 2px;
      }
    }
  }
  &.vtrigger {
    ion-segment-button {
    
      min-width: 0;
      &.md {
        --background-hover: var(--fat-switcher-vtrigger-checked-contrast);
        --color-checked: var(--fat-switcher-vtrigger-checked-contrast);
        --color: var(--fat-switcher-unchecked-contrast);
        --indicator-color: var(--fat-switcher-vtrigger-checked-contrast);
        --indicator-height: 2px;
      }
    }
  }

  @media screen and (min-width: 576px) {
    &.ios {
      max-width: 493px;
    }
    &.md {
      max-width: 500px;
      margin: 0 auto;
      &:last-of-type {
        margin-bottom: 4px;
      }
    }
  }

  @media screen and (min-width: 992px) {
    &.md {
      display: inline-block;
      width: 85%;
      max-width: 1000px;


      ion-segment-button.md {
        margin: 0 5px;
        --indicator-height: 3px;
        text-transform: none;
        display: inline-block;
      }

      &.collapsed {
        transition: all 270ms ease-in-out;
        opacity: 0;
      }
    
      &.expanded {
         transition: all 270ms ease-in-out;
         opacity: 1;
      }

    }

    @at-root {
      #frameData .segments.md, #movesList .segments.md, #combos .segments.md, #moveDetail .segments.md {
        display: flex;
      }
      #characterSelect .segments.md {
        margin: 0 auto;
        display: flex;
        width: 100%;
      }
    }
  }

  @media screen and (max-width:992px) {
    &.collapsed {
      max-height: 0px;
      transition: all 270ms ease-in-out;
      opacity: 0;
    }
  
    &.expanded {
       height: fit-content;
       max-height: 50px;
       transition: max-height 270ms ease-in-out;
       opacity: 1;
    }
  }
}

